--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,9 @@ dependencies:
   intl: ^0.20.2
   provider: ^6.1.5+1
   shared_preferences: ^2.5.4
+  firebase_core: ^4.4.0
+  firebase_crashlytics: ^5.0.7
+  firebase_analytics: ^12.1.1
 
 dev_dependencies:
   flutter_test:
