--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.8
+  pin_code_fields: ^8.0.1
 
   flutter_localizations:
     sdk: flutter
